data preparation and data cleaning

--- a/notebooks/data_preparation_and_cleaning.ipynb
+++ b/notebooks/data_preparation_and_cleaning.ipynb
@@ -18,7 +18,8 @@
    "source": [
     "import importlib\n",
     "import extract_data as ed\n",
-    "import data_preparation as dp"
+    "import data_preparation as dp\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
@@ -27,13 +28,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = 'postgresql://postgres:teddy4309@localhost:5432/telecom'\n",
+    "load_dotenv()\n",
+    "\n",
+    "db_user = os.getenv(\"DB_USER\")\n",
+    "db_password = os.getenv(\"DB_PASSWORD\")\n",
+    "db_host = os.getenv(\"DB_HOST\")\n",
+    "db_port = os.getenv(\"DB_PORT\")\n",
+    "db_name = os.getenv(\"DB_NAME\")\n",
+    "\n",
+    "# db_url = 'postgresql://postgres:teddy4309@localhost:5432/telecom' \n",
+    "db_url = f'postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}'\n",
     "query = 'SELECT * FROM xdr_data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +352,7 @@
        "[8 rows x 50 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
