--- a/notebooks/satisfactionAnalysis.ipynb
+++ b/notebooks/satisfactionAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,15 @@
     "reload(ue)\n",
     "\n",
     "data_engagement = ue.aggregate_engagement_metrics(cleaned_data)\n",
-    "data_experience = ea.aggregate_user_experience(cleaned_data)"
+    "data_experience = ea.aggregate_user_experience(cleaned_data)\n",
+    "\n",
+    "data_engagement.to_csv('../data/user_engagement_aggregated.csv', index=False)\n",
+    "data_experience.to_csv('../data/user_experience_aggregated.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +182,7 @@
        "4          4.247378  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -278,13 +281,15 @@
        "4   3.360301e+10          0.008092          4.247378            2.127735"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_satisfaction = sa.calculate_satisfaction_score(data_engagement, data_experience)\n",
+    "\n",
+    "data_satisfaction.to_csv('../data/user_satisfaction_aggregated.csv', index=False)\n",
     "data_satisfaction.head()"
    ]
   },
